src/main/resources/assets/styles/common.less
@border-color: #e3e3e3;

.flex() {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: baseline;
  align-content: flex-start;
}

.card-border() {
  border-bottom: 1px solid @border-color;
}

.card-box() {
  margin: 10px;
  background-color: @admin-white;
  border-radius: 3px;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2), 0 5px 10px 0 rgba(0, 0, 0, 0.15);
  text-align: center;
}

.link-title() {
  position: relative;
  margin-bottom: 10px;
  padding: 10px;
  font-weight: bold;

  .link {
    text-decoration: none;
    font-weight: bold;
    color: @admin-black;

    &::after {
      position: absolute;
      padding-left: 0.25em;
      font-weight: normal;
      color: @admin-dark-gray;
    }
  }
}

.card-button() {
  border-radius: 15px;
  min-width: 110px;
  height: 32px;
  margin: 10px auto;
  padding: 0 10px;
  background-color: @admin-white;
  border: 2px solid @border-color;
  font-size: 0.8em;
  font-weight: bold;
  user-select: none;
  cursor: pointer;
}

